<resources>
    <string name="app_name">iYou</string>
    <string name="action_settings">Settings</string>
    <string name="get_intent_error">网络错误</string>
    <string name="refresh_finish">刷新完成惹 (●\'◡\'●)</string>
    <string name="not_any_more">(・-・*) 已经到尽头惹</string>
    <string name="load_finished">加载完成啦2333</string>
    <string name="more">...</string>

    <!-- contentDescription -->
    <string name="c_d_launch_img">iYou 启动界面</string>

    <!-- contentDescription -->
    <string name="c_d_dynamic_head">动态发布者的头像</string>
    <string name="c_d_dynamic_name">动态发布者的名字</string>
    <string name="c_d_dynamic_time">动态发布的时间</string>
    <string name="c_d_dynamic_content">动态的内容</string>
    <string name="c_d_dynamic_img">动态内容中包含的图片</string>
    <string name="c_d_dynamic_video">动态内容中包含的视频</string>
    <string name="c_d_dynamic_view_count">动态的浏览量</string>
    <string name="c_d_dynamic_thumb_button">点赞</string>
    <string name="c_d_dynamic_thumb_liker">点赞的人</string>
    <string name="c_d_dynamic_comment_button">评论</string>
    <string name="title_activity_web_view">WebViewActivity</string>

    <!-- VOD contentDescription -->
    <string name="c_d_vod_head">视频海报</string>
    <string name="c_d_vod_name">视频名称</string>
    <string name="c_d_vod_timelength">视频时长</string>
    <string name="c_d_vod_introduce">视频简介</string>
    <string name="c_d_vod_viewcount">播放量</string>
    <string name="vod_list_no_introduce">暂无简介</string>


    <!-- publicDynamicPage -->
    <string name="menu_dynamic_pub">发表</string>
    <string name="placeholder_dynamic_pub">此刻的小可爱正在干什么呢(●\'◡\'●)</string>


    <!-- Vod Error -->
    <string name="err_vod_req">请求出错</string>
    <string name="err_vod_UnsupportedEncoding">编码出错</string>
    <string name="err_vod_CookieUnavailable">Cookie不可用</string>
    <string name="err_vod_NotCookie">获取Cookie失败</string>
    <string name="err_vod_wifi">请确保您已经连接了校园网</string>

    <!-- MainActivity -->
    <string name="title_activity_main">iYou</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserName</string>
    <string name="nav_header_subtitle">service@youngon.work</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_dynamic">动态空间</string>
    <string name="menu_vod">VOD视频</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_activity_login">Login Youngon</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_login_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_error">登录出错</string>
    <string name="login_success">登录成功</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_stuid">学号</string>
    <string name="login_password">密码</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
