<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.v7.widget.CardView
        android:id="@+id/vod_card"
        app:cardCornerRadius="2dp"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="160dp"
            android:orientation="horizontal" >
        <com.szysky.customize.siv.SImageView
            android:id="@+id/vod_img"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            app:img="@drawable/default_vod"
            app:displayType="rect"
            app:border_width="0dp"
            app:scaleType="fix_XY"
            android:contentDescription="@string/c_d_vod_head"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/vod_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:contentDescription="@string/c_d_vod_name"
                android:text="@string/c_d_vod_name"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/vod_timelength"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:contentDescription="@string/c_d_vod_timelength"
                android:text="@string/c_d_vod_timelength"
                android:textColor="#AEAEAE"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/vod_viewcount"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:contentDescription="@string/c_d_vod_viewcount"
                android:text="@string/c_d_vod_viewcount"
                android:textColor="#AEAEAE"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/vod_introduce"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:contentDescription="@string/c_d_vod_introduce"
                android:text="@string/c_d_vod_introduce"
                android:textColor="#AEAEAE"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>
