<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--<data>-->
        <!--<variable-->
            <!--name="viewModel"-->
            <!--type="cn.com.wangxuefeng.iyou.DynamicViewModel"/>-->
    <!--</data>-->
    <android.support.v7.widget.CardView
        app:cardCornerRadius="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/publish_head"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:contentDescription="@string/c_d_dynamic_head"
                    android:src="@drawable/default_head" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                    <TextView
                        android:id="@+id/publish_name"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:contentDescription="@string/c_d_dynamic_name"
                        android:text="@string/c_d_dynamic_name"
                        android:textColor="#000"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/publish_time"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center_vertical"
                        android:contentDescription="@string/c_d_dynamic_time"
                        android:text="@string/c_d_dynamic_time"
                        android:textColor="#AEAEAE"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/dynamic_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/c_d_dynamic_content"
                    android:text="@string/c_d_dynamic_content"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                <com.hedan.textdrawablelibrary.TextViewDrawable
                    android:id="@+id/dynamic_view_count"
                    android:drawableLeft="@drawable/view_count_hot"
                    android:drawablePadding="5dp"
                    app:drawableLeftWidth="15dp"
                    app:drawableLeftHeight="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/c_d_dynamic_view_count"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:text="@string/c_d_dynamic_view_count"
                    android:textSize="12sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal" >
                    <ImageView
                        android:id="@+id/thumb_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/c_d_dynamic_thumb_button"
                        app:srcCompat="@drawable/ic_thumb_button_outline" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <com.hedan.textdrawablelibrary.TextViewDrawable
                    android:id="@+id/dynamic_liker"
                    android:drawableLeft="@drawable/ic_thumb_button_outline"
                    app:drawableLeftWidth="15dp"
                    app:drawableLeftHeight="15dp"
                    android:drawablePadding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/c_d_dynamic_thumb_liker"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:text="@string/c_d_dynamic_thumb_liker"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>